登录时cdk过期时的提示框美化，提示cdk过期并跳转到cdk兑换页面

--- a/app_web/login.html
+++ b/app_web/login.html
@@ -184,6 +184,7 @@
 						$.cookie('username',obj['username'],{expires:1,path:'/'});
 
                         location.href='message.html';
+
                     }else if(e.error == '004'){
                     	layer.open({
 						    content: '账户不存在'
@@ -191,11 +192,15 @@
 						    ,time: 2 
 						  });
                     }else if(e.error == '007'){
-                    	layer.open({
-                    		content: e.msg
-                    		,skin: 'msg'
-                    		,time: 2
-                    		});
+                    	//询问是否充值
+						  layer.open({
+						    content: e.msg
+						    ,btn: ['确认', '取消']
+						    ,yes: function(index){
+						      location.href='./cdk.html';
+						      layer.close(index);
+						    }
+						  });
                     }
                 },
                 error:function()
